@@ -74,6 +74,17 @@ a command such as "ifup \-\-allow=hotplug eth0 eth1", which will only bring
 up eth0 or eth1 if it is listed in an "allow-hotplug" line. Note that
 "allow-auto" and "auto" are synonyms.
 .P
+Lines beginning with "no-auto-down" are used to identify interfaces that should
+not be brought down by the command "ifdown -a". Its main use is to prevent an
+interface from being brought down during system shutdown time, for example if
+the root filesystem is a network filesystem and the interface should stay up
+until the very end. Note that you can still bring down the interface by
+specifying the interface name explicitly.
+.P
+Lines beginning with "no-scripts" are used to identify interfaces for which scripts in
+.IR /etc/network/if\-*.d/
+should not be run when those interfaces are brought up or down.
+.P
 Lines beginning with "source" are used to include stanzas from other files,
 so configuration can be split into many files. The word "source" is
 followed by the path of file to be sourced. Shell wildcards can be
